# aioreq

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
aioreq/: __init__.py  api.py
examples/: client.py  server.py
experiments/: asyncio_sockets.py  multiplexing.py  synchronous_client.py
